Compilateur/PMachine/src/PascalParser.java
// Generated from /home/maxou/Documents/Cours/M1/S2/Compilation/PMachine/src/Pascal.g4 by ANTLR 4.7.2

import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PascalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, ID=38, INT=39, 
		WS=40;
	public static final int
		RULE_declarations = 0, RULE_declaration = 1, RULE_declavar = 2, RULE_declafunc = 3, 
		RULE_typi = 4, RULE_variable = 5, RULE_fields = 6, RULE_field = 7, RULE_instructions = 8, 
		RULE_instruction = 9, RULE_fonction = 10, RULE_expression = 11, RULE_factor = 12, 
		RULE_term = 13, RULE_simple_expression = 14, RULE_program = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"declarations", "declaration", "declavar", "declafunc", "typi", "variable", 
			"fields", "field", "instructions", "instruction", "fonction", "expression", 
			"factor", "term", "simple_expression", "program"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'var'", "','", "':'", "'function'", "'('", "')'", "'begin'", 
			"'end'", "'integer'", "'array'", "'['", "']'", "'of'", "'record'", "'.'", 
			"':='", "'if'", "'then'", "'else'", "'while'", "'do'", "'read'", "'write'", 
			"'colorLed'", "'sleepLed'", "'switchLightZumo'", "'='", "'<>'", "'<'", 
			"'>'", "'<='", "'>='", "'*'", "'/'", "'+'", "'-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "ID", "INT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pascal.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private ArrayList<Instruction> pcode;
	    private SymboleTable symbtable;
	    private HashMap<String, Integer> vars;

	    public  Instruction[] lire() throws Exception {
	        pcode = new ArrayList<Instruction>();
	        symbtable = new SymboleTable();
	        vars = new HashMap<String, Integer>();
	        program();
	        return pcode.toArray(new Instruction[]{});
	    }

	public PascalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitDeclarations(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_declarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			declaration();
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(33);
				match(T__0);
				setState(34);
				declaration();
				}
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}

			            pcode.add(0, new Instruction.INC(symbtable.getSize()));
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public DeclavarContext declavar() {
			return getRuleContext(DeclavarContext.class,0);
		}
		public DeclafuncContext declafunc() {
			return getRuleContext(DeclafuncContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		try {
			setState(44);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				declavar();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(43);
				declafunc();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclavarContext extends ParserRuleContext {
		public Token ID;
		public TypiContext typi;
		public List<TerminalNode> ID() { return getTokens(PascalParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PascalParser.ID, i);
		}
		public TypiContext typi() {
			return getRuleContext(TypiContext.class,0);
		}
		public DeclavarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declavar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterDeclavar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitDeclavar(this);
		}
	}

	public final DeclavarContext declavar() throws RecognitionException {
		DeclavarContext _localctx = new DeclavarContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declavar);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			ArrayList<String> ids = new ArrayList<String>();
			setState(47);
			match(T__1);
			setState(53);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(48);
					((DeclavarContext)_localctx).ID = match(ID);

					        ids.add((((DeclavarContext)_localctx).ID!=null?((DeclavarContext)_localctx).ID.getText():null));
					    
					setState(50);
					match(T__2);
					}
					} 
				}
				setState(55);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(56);
			((DeclavarContext)_localctx).ID = match(ID);

			            ids.add((((DeclavarContext)_localctx).ID!=null?((DeclavarContext)_localctx).ID.getText():null));
			        
			setState(58);
			match(T__3);
			setState(59);
			((DeclavarContext)_localctx).typi = typi();

			                symbtable.putListVar(ids,((DeclavarContext)_localctx).typi.type);
			            
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclafuncContext extends ParserRuleContext {
		public Token idFunc;
		public TypiContext t1;
		public Token i1;
		public TypiContext t2;
		public Token i2;
		public TypiContext t3;
		public InstructionsContext instructions() {
			return getRuleContext(InstructionsContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(PascalParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PascalParser.ID, i);
		}
		public List<TypiContext> typi() {
			return getRuleContexts(TypiContext.class);
		}
		public TypiContext typi(int i) {
			return getRuleContext(TypiContext.class,i);
		}
		public List<DeclarationsContext> declarations() {
			return getRuleContexts(DeclarationsContext.class);
		}
		public DeclarationsContext declarations(int i) {
			return getRuleContext(DeclarationsContext.class,i);
		}
		public DeclafuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declafunc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterDeclafunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitDeclafunc(this);
		}
	}

	public final DeclafuncContext declafunc() throws RecognitionException {
		DeclafuncContext _localctx = new DeclafuncContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declafunc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(T__4);
			setState(63);
			((DeclafuncContext)_localctx).idFunc = match(ID);

			            System.out.println("--declafunc--");
			            //definition de fonction
			            vars.put((((DeclafuncContext)_localctx).idFunc!=null?((DeclafuncContext)_localctx).idFunc.getText():null), pcode.size()); //memorise la ligne de définion de la fonction
			            pcode.add(new Instruction.BRN(-4)); //instruction factice a changer
			            //instanciation des variables
			            ArrayList<Type> types = new ArrayList<Type>();
			            ArrayList<String> noms = new ArrayList<String>();
			            symbtable.setLocal(); //pour memoriser les instructions en local
			        
			setState(65);
			match(T__5);
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__9) | (1L << T__10) | (1L << T__14))) != 0)) {
				{
				setState(66);
				((DeclafuncContext)_localctx).t1 = typi();
				setState(67);
				((DeclafuncContext)_localctx).i1 = match(ID);
				types.add(((DeclafuncContext)_localctx).t1.type);noms.add((((DeclafuncContext)_localctx).i1!=null?((DeclafuncContext)_localctx).i1.getText():null));symbtable.putVar((((DeclafuncContext)_localctx).i1!=null?((DeclafuncContext)_localctx).i1.getText():null), ((DeclafuncContext)_localctx).t1.type);
				}
			}

			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(72);
				match(T__2);
				setState(73);
				((DeclafuncContext)_localctx).t2 = typi();
				setState(74);
				((DeclafuncContext)_localctx).i2 = match(ID);
				types.add(((DeclafuncContext)_localctx).t2.type);noms.add((((DeclafuncContext)_localctx).i2!=null?((DeclafuncContext)_localctx).i2.getText():null));symbtable.putVar((((DeclafuncContext)_localctx).i2!=null?((DeclafuncContext)_localctx).i2.getText():null), ((DeclafuncContext)_localctx).t2.type);
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(82);
			match(T__6);
			setState(83);
			match(T__3);
			setState(84);
			((DeclafuncContext)_localctx).t3 = typi();
			setState(85);
			match(T__0);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1 || _la==T__4) {
				{
				{
				setState(86);
				declarations();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92);
			match(T__7);
			setState(93);
			instructions();
			setState(94);
			match(T__8);
			setState(95);
			match(T__0);

			                symbtable.setGlobal(); //retour en global

			                Type.Fonction f = new Type.Fonction(((DeclafuncContext)_localctx).t3.type, types, noms);
			                System.out.println("declafunc : f="+f);
			                symbtable.putVar((((DeclafuncContext)_localctx).idFunc!=null?((DeclafuncContext)_localctx).idFunc.getText():null), f); //memorisation de la fonction dans table des symboles

			                System.out.println("declafunc : RET");
			                pcode.add(new Instruction.RET(types.size()));
			                int sizeFunc = pcode.size() - vars.get((((DeclafuncContext)_localctx).idFunc!=null?((DeclafuncContext)_localctx).idFunc.getText():null));
			                pcode.set(vars.get((((DeclafuncContext)_localctx).idFunc!=null?((DeclafuncContext)_localctx).idFunc.getText():null)), new Instruction.BRN(sizeFunc + 1)); //saut de la fonction
			                System.out.println("fin declafunc");
			            
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypiContext extends ParserRuleContext {
		public Type type;
		public Token INT;
		public TypiContext typi;
		public FieldsContext fields;
		public TerminalNode INT() { return getToken(PascalParser.INT, 0); }
		public TypiContext typi() {
			return getRuleContext(TypiContext.class,0);
		}
		public FieldsContext fields() {
			return getRuleContext(FieldsContext.class,0);
		}
		public TypiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typi; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterTypi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitTypi(this);
		}
	}

	public final TypiContext typi() throws RecognitionException {
		TypiContext _localctx = new TypiContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_typi);
		try {
			setState(113);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				match(T__9);
				((TypiContext)_localctx).type =  new Type.Int();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				match(T__10);
				setState(101);
				match(T__11);
				setState(102);
				((TypiContext)_localctx).INT = match(INT);
				setState(103);
				match(T__12);
				setState(104);
				match(T__13);
				setState(105);
				((TypiContext)_localctx).typi = typi();
				((TypiContext)_localctx).type =  new Type.Tab((((TypiContext)_localctx).INT!=null?Integer.valueOf(((TypiContext)_localctx).INT.getText()):0),((TypiContext)_localctx).typi.type);
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 3);
				{
				setState(108);
				match(T__14);
				setState(109);
				((TypiContext)_localctx).fields = fields();
				setState(110);
				match(T__8);
				((TypiContext)_localctx).type =  new Type.Record(((TypiContext)_localctx).fields.ids,((TypiContext)_localctx).fields.types);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public Type type;
		public Token ID;
		public List<TerminalNode> ID() { return getTokens(PascalParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PascalParser.ID, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitVariable(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			((VariableContext)_localctx).ID = match(ID);

			        System.out.println("--variable--");
			        Donnee d = symbtable.getDonnee((((VariableContext)_localctx).ID!=null?((VariableContext)_localctx).ID.getText():null));
			        System.out.println("ID.text = "+(((VariableContext)_localctx).ID!=null?((VariableContext)_localctx).ID.getText():null)+" " +"d="+d);
			        Type restype =d.getType();
			        ((VariableContext)_localctx).type = restype;

			        System.out.println("variable debutif");
			        if(symbtable.estGlobal){
			            //LDA dans le cas global
			            pcode.add(new Instruction.LDA(symbtable.getAdresse((((VariableContext)_localctx).ID!=null?((VariableContext)_localctx).ID.getText():null))));
			        }else{
			            //LDL dans le cas local
			            pcode.add(new Instruction.LDL(symbtable.getAdresse((((VariableContext)_localctx).ID!=null?((VariableContext)_localctx).ID.getText():null))));
			        }
			        System.out.println("--fin variable--");
			    
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__11 || _la==T__15) {
				{
				setState(125);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__11:
					{
					setState(117);
					match(T__11);
					setState(118);
					expression();
					setState(119);
					match(T__12);

					                             restype = ((Type.Tab) restype).type;
					                             ((VariableContext)_localctx).type =  restype;
					                             pcode.add(new Instruction.LDI(((Type.Tab) d.type).getType().size()));
					                             pcode.add(new Instruction.MUL());
					                             pcode.add(new Instruction.ADD());
					                           
					}
					break;
				case T__15:
					{
					setState(122);
					match(T__15);
					setState(123);
					((VariableContext)_localctx).ID = match(ID);

					        restype = (Type.Record) restype;
					        pcode.add(new Instruction.LDI(((Type.Record) restype).adresse((((VariableContext)_localctx).ID!=null?((VariableContext)_localctx).ID.getText():null))));
					        pcode.add(new Instruction.ADD());
					        restype = ((Type.Record) restype).type((((VariableContext)_localctx).ID!=null?((VariableContext)_localctx).ID.getText():null));
					        ((VariableContext)_localctx).type =  restype;
					    
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldsContext extends ParserRuleContext {
		public ArrayList<String> ids;
		public ArrayList<Type> types;
		public FieldContext field;
		public List<FieldContext> field() {
			return getRuleContexts(FieldContext.class);
		}
		public FieldContext field(int i) {
			return getRuleContext(FieldContext.class,i);
		}
		public FieldsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fields; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterFields(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitFields(this);
		}
	}

	public final FieldsContext fields() throws RecognitionException {
		FieldsContext _localctx = new FieldsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_fields);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			ArrayList<String> ids = new ArrayList<String>();ArrayList<Type> types = new ArrayList<Type>();
			setState(131);
			((FieldsContext)_localctx).field = field();
			ids.add(((FieldsContext)_localctx).field.id);types.add(((FieldsContext)_localctx).field.type);
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(133);
				match(T__0);
				setState(134);
				((FieldsContext)_localctx).field = field();
				ids.add(((FieldsContext)_localctx).field.id);types.add(((FieldsContext)_localctx).field.type);
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			((FieldsContext)_localctx).ids =  ids;((FieldsContext)_localctx).types =  types;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldContext extends ParserRuleContext {
		public String id;
		public Type type;
		public Token ID;
		public TypiContext typi;
		public TerminalNode ID() { return getToken(PascalParser.ID, 0); }
		public TypiContext typi() {
			return getRuleContext(TypiContext.class,0);
		}
		public FieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitField(this);
		}
	}

	public final FieldContext field() throws RecognitionException {
		FieldContext _localctx = new FieldContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_field);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			((FieldContext)_localctx).ID = match(ID);
			setState(145);
			match(T__3);
			setState(146);
			((FieldContext)_localctx).typi = typi();
			((FieldContext)_localctx).id =  (((FieldContext)_localctx).ID!=null?((FieldContext)_localctx).ID.getText():null);((FieldContext)_localctx).type =  ((FieldContext)_localctx).typi.type;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
